docs(changeset): add omitSecurityRequirementsFromTopLeveClient to konfig.yaml
