# generator/konfig-dash/packages/konfig-openapi-spec/openapi.yaml
@@ -4133,6 +4133,10 @@ components:
                   name: X-API-Key # <- security key
 
             If this field is true then "X-API-Key" will be used instead of "apiKey" in the generated SDKs.
+        omitSecurityRequirementsFromTopLeveClient:
+          type: array
+          items:
+            type: string
         readmeOperation:
           type: object
           properties:
